# tool-python-pc-log-onoff-getter

./: .gitignore  AGENTS.md  README.md  app.py  pc_log_on_off.py  pyproject.toml
docs/update/: 2026-07-07-readme-and-refactor.md
