[project]
name = "tool-python-pc-log-onoff-getter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "setuptools>=80.1.0",
    "six>=1.17.0",
    "tzdata>=2025.2",
    "wheel>=0.45.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
